Wed Jun 29 16:28:52 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp
	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
	* DAnCE/NodeManager/NAM_Map.cpp
	* DAnCE/NodeManager/NAM_Map.h
	* DAnCE/NodeManager/NodeDaemon.mpc
	* DAnCE/NodeManager/NodeDaemon_Impl.cpp
	* DAnCE/NodeManager/NodeDaemon_Impl.h
	* DAnCE/NodeManager/Node_Daemon.cpp
	* DAnCE/ciao/Deployment.idl

	Merged dance_multiple_assemblies to main.  This merge
	contains code necessary to be able to deploy multiple assemblies 
	into a single NodeManager.

Wed Jun 29 18:09:11 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
        
          Added check for successful opening of target file, which prevents
          a crash when the file open is unsuccessful, for example when
          write permissions are denied in the directory. Thanks to Will
          Otte <wotte@dre.vanderbilt.edu> for pointing out the problem.

Tue Jun 28 08:55:12 EDT 2005 Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/ComponentPackager/Base_Packager.cpp
        * DAnCE/ComponentPackager/Base_Packager.h
        * DAnCE/ComponentPackager/CPK_Packager.cpp
        * DAnCE/ComponentPackager/CPK_Packager.h
        * DAnCE/ComponentPackager/ComponentPackager.mpc
        * DAnCE/ComponentPackager/Component_Packager.cpp
        * DAnCE/ComponentPackager/Modified_Deployment.xsd
        * DAnCE/ComponentPackager/PDL_Handler.cpp
        * DAnCE/ComponentPackager/PDL_Handler.h
        * DAnCE/ComponentPackager/README.html
        * DAnCE/ComponentPackager/Sample.pdl
        * DAnCE/ComponentPackager/XercesString.cpp
        * DAnCE/ComponentPackager/XercesString.h

        Added the files implementing ComponentPackager, for details
        please read README.html
