@@ -1,6 +1,6 @@
 //==================================================================
 /**
- *  @file  Base_Packagerr.h
+ *  @file  Base_Packager.h
  *
  *  $Id$
  *
